Misc work + Add rswag spec for git install endpoint. + refactor models to use STI. + add new FileService.
